Update layout and list styles for telehealth pages
Refactored the opportunity list order and applied the 'split-list' class for improved layout consistency in index.html and site/index.html. Adjusted the split-list media query breakpoint in style.css for better responsiveness. Modified readyprotelehealth.html to restructure the split-layout and sidebar placement for a more logical column arrangement.

--- a/readyprotelehealth.html
+++ b/readyprotelehealth.html
@@ -368,7 +368,7 @@
     <section class="onboarding-section">
         <div class="container-wide"> <!-- Changed to container-wide for 3-col layout -->
 
-            <div class="split-layout-wrapper">
+            <div class="split-layout-wrapper" style="display: flex; flex-direction: column;">
 
                 <!-- LEFT SIDEBAR -->
                 <aside class="sidebar sidebar-left">
@@ -399,6 +399,41 @@
                         <p class="info-text">
                             Our drinks and supplements keep you hydrated, regular, and comfortable, without the bloat or
                             sugar overload. Gentle on your gut, easy on your routine, and built for everyday wellness.
+                        </p>
+                    </div>
+                </aside>
+
+                <!-- RIGHT SIDEBAR -->
+                <aside class="sidebar sidebar-right">
+                    <div class="info-card">
+                        <div class="info-icon">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <circle cx="12" cy="12" r="10" />
+                                <line x1="12" y1="16" x2="12" y2="12" />
+                                <line x1="12" y1="8" x2="12.01" y2="8" />
+                            </svg>
+                        </div>
+                        <h3 class="info-title">Portion Smart</h3>
+                        <p class="info-text">
+                            We believe smart nutrition should fit into your day — not the other way around. That's why
+                            we craft portion-right snacks, drinks, and supplements that help you meet your goals without
+                            stress or waste. No overstuffed shakes. No half-eaten bars. Just balance that fits.
+                        </p>
+                    </div>
+
+                    <div class="info-card">
+                        <div class="info-icon">
+                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
+                                stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z" />
+                            </svg>
+                        </div>
+                        <h3 class="info-title">Backed by 45 Years</h3>
+                        <p class="info-text">
+                            We've helped thousands of people fuel their health journeys, and we've taken everything
+                            we've learned from the medical and wellness world to create ReadyPro. Every product combines
+                            real-world dietitian insight, scientific precision, and decades of experience.
                         </p>
                     </div>
                 </aside>
@@ -503,41 +538,6 @@
                         </div>
                     </form>
                 </div>
-
-                <!-- RIGHT SIDEBAR -->
-                <aside class="sidebar sidebar-right">
-                    <div class="info-card">
-                        <div class="info-icon">
-                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                                stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                <circle cx="12" cy="12" r="10" />
-                                <line x1="12" y1="16" x2="12" y2="12" />
-                                <line x1="12" y1="8" x2="12.01" y2="8" />
-                            </svg>
-                        </div>
-                        <h3 class="info-title">Portion Smart</h3>
-                        <p class="info-text">
-                            We believe smart nutrition should fit into your day — not the other way around. That's why
-                            we craft portion-right snacks, drinks, and supplements that help you meet your goals without
-                            stress or waste. No overstuffed shakes. No half-eaten bars. Just balance that fits.
-                        </p>
-                    </div>
-
-                    <div class="info-card">
-                        <div class="info-icon">
-                            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor"
-                                stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-                                <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z" />
-                            </svg>
-                        </div>
-                        <h3 class="info-title">Backed by 45 Years</h3>
-                        <p class="info-text">
-                            We've helped thousands of people fuel their health journeys, and we've taken everything
-                            we've learned from the medical and wellness world to create ReadyPro. Every product combines
-                            real-world dietitian insight, scientific precision, and decades of experience.
-                        </p>
-                    </div>
-                </aside>
 
             </div> <!-- End split-layout-wrapper -->
         </div>
