--- a/site/index.html
+++ b/site/index.html
@@ -524,7 +524,7 @@
                     </div>
                     <p>Launch your own branded telehealth business powered by our infrastructure. We handle fulfillment,
                         compliance, and support—you keep the revenue.</p>
-                    <ul class="opportunity-list">
+                    <ul class="opportunity-list split-list">
                         <li>White-label patient portal</li>
                         <li>Full back-office support</li>
                         <li>Licensed provider network included</li>
