Update logo and adjust logo styles site-wide
Replaced the old logo image with a new logo.png and updated all HTML references to use the new logo. Increased logo size in CSS and changed object-fit from cover to contain for better display of the circular logo.

--- a/readyprotelehealth.html
+++ b/readyprotelehealth.html
@@ -328,7 +328,7 @@
 
                         <!-- The Rx Spot Standard Logo Container -->
                         <a href="index.html" class="logo">
-                            <img src="images/processed/TheRxSpot_Logo_WebHD.png" alt="The Rx Spot" class="logo-image">
+                            <img src="images/logo.png" alt="The Rx Spot" class="logo-image">
                         </a>
                     </div>
 
