--- a/nutrition-business.html
+++ b/nutrition-business.html
@@ -180,7 +180,7 @@
             <div class="container">
                 <div class="nav-wrapper">
                     <a href="index.html" class="logo">
-                        <img src="images/processed/TheRxSpot_Logo_WebHD.png" alt="The Rx Spot" class="logo-image">
+                        <img src="images/logo.png" alt="The Rx Spot" class="logo-image">
                     </a>
 
                     <div class="nav-links">
