--- a/index.html
+++ b/index.html
@@ -750,7 +750,7 @@
                 <p style="margin-bottom: 20px; font-size: 0.85rem; color: #6b7280; font-style: italic;">* Indicates
                     required field</p>
 
-                <form class="modal-form" id="patient-form" action="https://formsubmit.co/leads@therxspot.com"
+                <form class="modal-form" id="patient-form" action="https://formsubmit.co/forms@therxspot.com"
                     method="POST">
                     <input type="hidden" name="_subject" value="New Patient Consultation Request">
                     <input type="hidden" name="_template" value="box">
@@ -828,7 +828,7 @@
                 <p style="margin-bottom: 20px; font-size: 0.85rem; color: #6b7280; font-style: italic;">* Indicates
                     required field</p>
 
-                <form class="modal-form" id="b2b-form" action="https://formsubmit.co/leads@therxspot.com" method="POST">
+                <form class="modal-form" id="b2b-form" action="https://formsubmit.co/forms@therxspot.com" method="POST">
                     <input type="hidden" name="_subject" value="New B2B Access Request">
                     <input type="hidden" name="_template" value="box">
                     <input type="hidden" name="_captcha" value="false">
@@ -975,7 +975,7 @@
                 <p style="margin-bottom: 20px; font-size: 0.85rem; color: #6b7280; font-style: italic;">* Indicates
                     required field</p>
 
-                <form class="modal-form" id="opportunities-form" action="https://formsubmit.co/leads@therxspot.com"
+                <form class="modal-form" id="opportunities-form" action="https://formsubmit.co/forms@therxspot.com"
                     method="POST">
                     <input type="hidden" name="_subject" value="New Business Opportunity Inquiry">
                     <input type="hidden" name="_template" value="box">
