--- a/readyprotelehealth.html
+++ b/readyprotelehealth.html
@@ -304,9 +304,7 @@
 
                     <div class="form-group">
                         <label for="referral">Who referred you? *</label>
-                        <input type="text" id="referral" name="referral" required value="Ready Pro Partnership" readonly
-                            style="background-color: var(--color-gray-100); color: var(--color-gray-500);">
-                        <small style="color: var(--color-gray-500);">Pre-filled for partnership tracking</small>
+                        <input type="text" id="referral" name="referral" required>
                     </div>
 
                     <div class="form-group">
